Add compile time size checks for packed structures

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -783,6 +783,7 @@ typedef struct libtrace_ip
     struct in_addr ip_src;		/**< Source Address */
     struct in_addr ip_dst;		/**< Destination Address */
 } PACKED libtrace_ip_t;
+ct_assert(sizeof(libtrace_ip_t) == 20);
 
 /** IPv6 header extension structure */
 typedef struct libtrace_ip6_ext
@@ -790,6 +791,7 @@ typedef struct libtrace_ip6_ext
 	uint8_t nxt;	/**< Next header */
 	uint8_t len;	/**< Length of the current header */
 } PACKED libtrace_ip6_ext_t;
+ct_assert(sizeof(libtrace_ip6_ext_t) == 2);
 
 /** IPv6 fragmentation header */
 typedef struct libtrace_ip6_frag 
@@ -799,6 +801,7 @@ typedef struct libtrace_ip6_frag
 	uint16_t frag_off;	/**< Fragment Offset (includes M flag) */
 	uint32_t ident;	/** Fragment identification */
 } PACKED libtrace_ip6_frag_t;
+ct_assert(sizeof(libtrace_ip6_frag_t) == 8);
 
 /** Generic IPv6 header structure
  *
@@ -814,6 +817,7 @@ typedef struct libtrace_ip6
     struct in6_addr ip_src;		/**< Source address */
     struct in6_addr ip_dst;		/**< Destination address */
 } PACKED libtrace_ip6_t;
+ct_assert(sizeof(libtrace_ip6_t) == 40);
 
 /** Generic TCP header structure */
 typedef struct libtrace_tcp
@@ -853,6 +857,7 @@ typedef struct libtrace_tcp
     uint16_t check;		/**< Checksum */
     uint16_t urg_ptr;		/**< Urgent Pointer */
 } PACKED libtrace_tcp_t;
+ct_assert(sizeof(libtrace_tcp_t) == 20);
 
 /** Generic UDP header structure */
 typedef struct libtrace_udp {
@@ -861,6 +866,7 @@ typedef struct libtrace_udp {
   uint16_t	len;		/**< Length */
   uint16_t	check;		/**< Checksum */
 } PACKED libtrace_udp_t;
+ct_assert(sizeof(libtrace_udp_t) == 8);
 
 /** Generic ICMP header structure */
 typedef struct libtrace_icmp
@@ -883,6 +889,7 @@ typedef struct libtrace_icmp
     } frag;			/**< Path MTU Discovery */
   } un;				/**< Union for Payloads of Various ICMP Codes */
 } PACKED libtrace_icmp_t;
+ ct_assert(sizeof(libtrace_icmp_t) == 8);
 
 /** Generic ICMPv6 header structure */
 typedef struct libtrace_icmp6 {
@@ -905,6 +912,7 @@ typedef struct libtrace_icmp6 {
     } echo; /**< Data required for Echo Request and Reply messages */
   } un;
 } PACKED libtrace_icmp6_t;
+ct_assert(sizeof(libtrace_icmp_t) == 8);
 
 /** Generic LLC/SNAP header structure */
 typedef struct libtrace_llcsnap
@@ -917,6 +925,7 @@ typedef struct libtrace_llcsnap
   LT_BITFIELD32 oui:24;		/**< Organisationally Unique Identifier (scope)*/
   uint16_t type;		/**< Protocol within OUI */
 } PACKED libtrace_llcsnap_t;
+ct_assert(sizeof(libtrace_llcsnap_t) == 8);
 
 /** 802.3 frame */
 typedef struct libtrace_ether
@@ -925,6 +934,7 @@ typedef struct libtrace_ether
   uint8_t ether_shost[6];	/**< Source Ether Addr */
   uint16_t ether_type;		/**< Packet Type ID Field (next-header) */
 } PACKED libtrace_ether_t;
+ct_assert(sizeof(libtrace_ether_t) == 14);
 
 /** 802.1Q frame */
 typedef struct libtrace_8021q 
@@ -936,6 +946,7 @@ typedef struct libtrace_8021q
   uint16_t vlan_ether_type;	 /**< VLAN Sub-packet Type ID Field 
 				   * (next-header)*/
 } PACKED libtrace_8021q_t;
+ct_assert(sizeof(libtrace_8021q_t) == 4);
 
 /** ATM User Network Interface (UNI) Cell. */
 typedef struct libtrace_atm_cell
@@ -947,6 +958,7 @@ typedef struct libtrace_atm_cell
   LT_BITFIELD32 clp:1;		/**< Cell Loss Priority */
   LT_BITFIELD32 hec:8;		/**< Header Error Control */
 } PACKED libtrace_atm_cell_t;
+ct_assert(sizeof(libtrace_atm_cell_t) == 5);
 
 /** ATM Network Node/Network Interface (NNI) Cell. */
 typedef struct libtrace_atm_nni_cell
@@ -957,6 +969,7 @@ typedef struct libtrace_atm_nni_cell
   LT_BITFIELD32 clp:1;		/**< Cell Loss Priority */
   LT_BITFIELD32 hec:8;		/**< Header Error Control */
 } PACKED libtrace_atm_nni_cell_t;
+ct_assert(sizeof(libtrace_atm_nni_cell_t) == 5);
 
 /** Captured UNI cell.
  *
@@ -973,6 +986,7 @@ typedef struct libtrace_atm_capture_cell
   LT_BITFIELD32 pt:3;		/**< Payload Type */
   LT_BITFIELD32 clp:1;		/**< Cell Loss Priority */
 } PACKED libtrace_atm_capture_cell_t;
+ct_assert(sizeof(libtrace_atm_capture_cell_t) == 4);
 
 /** Captured NNI cell.
  *
@@ -989,6 +1003,7 @@ typedef struct libtrace_atm_nni_capture_cell
   LT_BITFIELD32 clp:1;		/**< Cell Loss Priority */
   LT_BITFIELD32 hec:8;		/**< Header Error Control */
 } PACKED libtrace_atm_nni_capture_cell_t;
+ct_assert(sizeof(libtrace_atm_nni_capture_cell_t) == 5);
 
 /** PPP header */
 typedef struct libtrace_ppp
@@ -1001,6 +1016,7 @@ typedef struct libtrace_ppp
 /* uint8_t header;  */		/**< PPP Control (0x03 - Unnumbered info) */
  uint16_t protocol;		/**< PPP Protocol (htons(0x0021) - IPv4 */
 } PACKED libtrace_ppp_t;
+ct_assert(sizeof(libtrace_ppp_t) == 2);
 
 /** PPPoE header */
 typedef struct libtrace_pppoe
@@ -1011,6 +1027,7 @@ typedef struct libtrace_pppoe
  uint16_t session_id;		/**< Session Identifier */
  uint16_t length;		/**< Total Length of the PPP packet */
 } PACKED libtrace_pppoe_t;
+ct_assert(sizeof(libtrace_pppoe_t) == 6);
 
 /** Libtrace local definition of GRE (Generalised Routing Protocol) header
  * RFC2890
@@ -1024,6 +1041,7 @@ typedef struct libtrace_gre_t
     uint16_t key;           /**< Optional key (or Tenant Network ID) */
     uint16_t seq;           /**< Optional sequence number */
 } PACKED libtrace_gre_t;
+ct_assert(sizeof(libtrace_gre_t) == 12);
 
 #define LIBTRACE_GRE_FLAG_CHECKSUM 0x8000
 #define LIBTRACE_GRE_FLAG_KEY      0x2000
@@ -1045,6 +1063,7 @@ typedef struct libtrace_vxlan_t
     uint8_t vni[3];         /**< VXLAN Network Identifier (VNI) */
     uint8_t reserved2;
 } PACKED libtrace_vxlan_t;
+ct_assert(sizeof(libtrace_vxlan_t) == 8);
 
 /** 802.11 header */
 typedef struct libtrace_80211_t {
@@ -1085,6 +1104,7 @@ typedef struct libtrace_80211_t {
         uint16_t     SeqCtl;	/**< Sequence Control */	
         uint8_t      mac4[6];	/**< MAC Address 4 */
 } PACKED libtrace_80211_t;
+ct_assert(sizeof(libtrace_80211_t) == 30);
 
 /** The Radiotap header pre-amble
  *
@@ -1099,6 +1119,7 @@ typedef struct libtrace_radiotap_t {
     uint16_t    it_len; /**< Length in bytes of the entire Radiotap header */
     uint32_t    it_present; /**< Which Radiotap fields are present */
 } PACKED libtrace_radiotap_t;
+ct_assert(sizeof(libtrace_radiotap_t) == 8);
 
 /** OSPF header */
 typedef struct libtrace_ospf_v2_t
@@ -1115,6 +1136,7 @@ typedef struct libtrace_ospf_v2_t
 	uint8_t au_data_len;	/**< Authentication Data Length */
 	uint32_t au_seq_num;	/**< Cryptographic Sequence Number */
 } PACKED libtrace_ospf_v2_t;
+ct_assert(sizeof(libtrace_ospf_v2_t) == 24);
 
 /** Options Field present in some OSPFv2 packets */
 typedef struct libtrace_ospf_options_t {
@@ -1136,6 +1158,7 @@ typedef struct libtrace_ospf_options_t {
 	LT_BITFIELD8 unused1:1;
 #endif
 } PACKED libtrace_ospf_options_t;
+ct_assert(sizeof(libtrace_ospf_options_t) == 1);
 
 /** LSA Header for OSPFv2 */
 typedef struct libtrace_ospf_lsa_v2_t
@@ -1149,6 +1172,7 @@ typedef struct libtrace_ospf_lsa_v2_t
 	uint16_t checksum;	/**< Checksum */ 
 	uint16_t length;	/**< Length of the LSA including LSA header */
 } PACKED libtrace_ospf_lsa_v2_t;
+ct_assert(sizeof(libtrace_ospf_lsa_v2_t) == 20);
 
 /** OSPFv2 Hello Packet */
 typedef struct libtrace_ospf_hello_v2_t
@@ -1164,6 +1188,7 @@ typedef struct libtrace_ospf_hello_v2_t
 	/** Neighbors follow from here, but there can be anywhere from 1 to N
 	 * neighbors so I can't include that here */
 } PACKED libtrace_ospf_hello_v2_t;
+ct_assert(sizeof(libtrace_ospf_hello_v2_t) == 20);
 
 /** OSPFv2 Database Description packet */
 typedef struct libtrace_ospf_db_desc_v2_t
@@ -1183,6 +1208,7 @@ typedef struct libtrace_ospf_db_desc_v2_t
 #endif
 	uint32_t seq;		/**< Sequence number for DD packets */
 } PACKED libtrace_ospf_db_desc_v2_t;
+ct_assert(sizeof(libtrace_ospf_db_desc_v2_t) == 8);
 
 /** OSPF Link State Request Packet */
 typedef struct libtrace_ospf_ls_req_t
@@ -1191,6 +1217,7 @@ typedef struct libtrace_ospf_ls_req_t
 	uint32_t ls_id;		/**< Link State Id */
 	uint32_t advertising_router;	/**< Advertising Router */
 } PACKED libtrace_ospf_ls_req_t;
+ct_assert(sizeof(libtrace_ospf_ls_req_t) == 12);
 
 /** OSPF Link State Update Packet */
 typedef struct libtrace_ospf_ls_update_t
@@ -1199,6 +1226,7 @@ typedef struct libtrace_ospf_ls_update_t
 
 	/* Followed by LSAs, use API functions to access these */
 } PACKED libtrace_ospf_ls_update_t;
+ct_assert(sizeof(libtrace_ospf_ls_update_t) == 4);
 
 /** OSPFv2 AS External LSA Body */
 typedef struct libtrace_ospf_as_external_lsa_t
@@ -1217,6 +1245,7 @@ typedef struct libtrace_ospf_as_external_lsa_t
 	struct in_addr forwarding;	/**< Forwarding address */
 	uint32_t external_tag;		/**< External Route Tag */
 } PACKED libtrace_ospf_as_external_lsa_v2_t;
+ct_assert(sizeof(libtrace_ospf_as_external_lsa_v2_t) == 16);
 
 /** OSPFv2 Summary LSA Body */
 typedef struct libtrace_ospf_summary_lsa
@@ -1228,6 +1257,7 @@ typedef struct libtrace_ospf_summary_lsa
 	uint8_t metric_c;	/**< Byte 3 of the Metric field */
 	
 } PACKED libtrace_ospf_summary_lsa_v2_t;
+ct_assert(sizeof(libtrace_ospf_summary_lsa_v2_t) == 8);
 
 /** OSPFv2 Network LSA Body */
 typedef struct libtrace_ospf_network_lsa_t
@@ -1235,6 +1265,7 @@ typedef struct libtrace_ospf_network_lsa_t
 	struct in_addr netmask;	/**< Netmask for the network */
 	/* Followed by IDs of attached routers */
 } PACKED libtrace_ospf_network_lsa_v2_t;
+ct_assert(sizeof(libtrace_ospf_network_lsa_v2_t) == 4);
 
 /** OSPFv2 Router Link structure */
 typedef struct libtrace_ospf_link_t
@@ -1245,6 +1276,7 @@ typedef struct libtrace_ospf_link_t
 	uint8_t num_tos;		/**< Number of TOS metrics */
 	uint16_t tos_metric;		/**< Cost of router link */
 } PACKED libtrace_ospf_link_v2_t;
+ct_assert(sizeof(libtrace_ospf_link_v2_t) == 12);
 
 /** OSPFv2 Router LSA */
 typedef struct libtrace_ospf_router_lsa_t
@@ -1263,6 +1295,7 @@ typedef struct libtrace_ospf_router_lsa_t
 	uint8_t zero2;		/**< Always zero */
 	uint16_t num_links;	/**< Number of links in LSA */
 } PACKED libtrace_ospf_router_lsa_v2_t;
+ct_assert(sizeof(libtrace_ospf_router_lsa_v2_t) == 4);
 
 /** OSPF message types */
 typedef enum {
@@ -1290,6 +1323,7 @@ typedef struct libtrace_sll_header_t {
         unsigned char addr[8];          /**< Link-layer address */
         uint16_t protocol;              /**< Protocol */
 } PACKED libtrace_sll_header_t;
+ct_assert(sizeof(libtrace_sll_header_t) == 16);
 
 
 /* SLL packet types */
