--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -922,7 +922,7 @@ typedef struct libtrace_llcsnap
   uint8_t ssap;			/**< Source Service Access Point */
   uint8_t control;		/**< Control field */
 /* SNAP */
-  LT_BITFIELD32 oui:24;		/**< Organisationally Unique Identifier (scope)*/
+  LT_BITFIELD32 oui:24; /**< Organisationally Unique Identifier (scope)*/
   uint16_t type;		/**< Protocol within OUI */
 } PACKED libtrace_llcsnap_t;
 ct_assert(sizeof(libtrace_llcsnap_t) == 8);
@@ -939,35 +939,64 @@ ct_assert(sizeof(libtrace_ether_t) == 14);
 /** 802.1Q frame */
 typedef struct libtrace_8021q 
 {
-  LT_BITFIELD16 vlan_pri:3;	 /**< VLAN User Priority */
-  LT_BITFIELD16 vlan_cfi:1; 	 /**< VLAN Format Indicator, 
-				   * 0 for ethernet, 1 for token ring */
-  LT_BITFIELD16 vlan_id:12; 	 /**< VLAN Id */
-  uint16_t vlan_ether_type;	 /**< VLAN Sub-packet Type ID Field 
-				   * (next-header)*/
+    /* The tci field includes:
+     * Priority code point - 3 bits
+     * Drop eligible indicator - 1 bit
+     * VLAN identifier - 12 bits
+     * These fields are merged and can be extracted using the macro functions.
+     * This is to deal with values crossing byte boundaries.
+     */
+    uint16_t tci;               /**< pri, cfi, id */
+    uint16_t vlan_ether_type;   /**< VLAN Sub-packet Type ID Field 
+                                  * (next-header)*/
+
+    #define VLAN_PCP(x) ((ntohs(x->tci) & 0xe000) >> 13)
+    #define VLAN_DEI(x) ((ntohs(x->tci) & 0x1000) >> 12)
+    #define VLAN_VID(x) (ntohs(x->tci) & 0xfff)
 } PACKED libtrace_8021q_t;
 ct_assert(sizeof(libtrace_8021q_t) == 4);
 
 /** ATM User Network Interface (UNI) Cell. */
 typedef struct libtrace_atm_cell
 {
-  LT_BITFIELD32 gfc:4;		/**< Generic Flow Control */
-  LT_BITFIELD32 vpi:8;		/**< Virtual Path Identifier */
-  LT_BITFIELD32 vci:16;		/**< Virtual Channel Identifier */
-  LT_BITFIELD32 pt:3;		/**< Payload Type */
-  LT_BITFIELD32 clp:1;		/**< Cell Loss Priority */
-  LT_BITFIELD32 hec:8;		/**< Header Error Control */
+    /* This field contains
+     * generic flow control (gfc) - 4 bits
+     * virtual path identifier (vpi) - 8 bits
+     * virtual channel identifier (vci) - 16 bits
+     * payload type (pt) - 3 bits
+     * cell loss priority (clp) - 1 bit
+     * These fields are merged and can be extracted using the macro functions.
+     * This is to deal with values crossing byte boundaries.
+     */
+    uint32_t gfc_vpi_vci_pt_clp;    /**< gfc, vpi, vci, pt, clp */
+    uint8_t hec;                    /**< Header Error Control */
+
+    #define ATM_GFC(x) ((ntohl(x->gfc_vpi_vci_pt_clp) & 0xf0000000) >> 28)
+    #define ATM_VPI(x) ((ntohl(x->gfc_vpi_vci_pt_clp) & 0x0ff00000) >> 20)
+    #define ATM_VCI(x) ((ntohl(x->gfc_vpi_vci_pt_clp) & 0x0ffff0) >> 4)
+    #define ATM_PT(x) ((ntohl(x->gfc_vpi_vci_pt_clp) & 0x0e) >> 1)
+    #define ATM_CLP(x) (ntohl(x->gfc_vpi_vci_pt_clp) & 0x01)
 } PACKED libtrace_atm_cell_t;
 ct_assert(sizeof(libtrace_atm_cell_t) == 5);
 
 /** ATM Network Node/Network Interface (NNI) Cell. */
 typedef struct libtrace_atm_nni_cell
 {
-  LT_BITFIELD32 vpi:12;		/**< Virtual Path Identifier */
-  LT_BITFIELD32 vci:16;		/**< Virtual Channel Identifier */
-  LT_BITFIELD32 pt:3;		/**< Payload Type */
-  LT_BITFIELD32 clp:1;		/**< Cell Loss Priority */
-  LT_BITFIELD32 hec:8;		/**< Header Error Control */
+    /* This field contains
+     * virtual path identifier (vpi) - 12 bits
+     * virtual channel identifier (vci) - 16 bits
+     * payload type (pt) - 3 bits
+     * cell loss priority (clp) - 1 bit
+     * These fields are merged and can be extracted using the macro functions.
+     * This is to deal with values crossing byte boundaries.
+     */
+    uint32_t vpi_vci_pt_clp;    /**< vpi, vci, pt, clp */
+    uint8_t hec;                /**< Header Error Control */
+
+    #define ATM_NNI_VPI(x) ((ntohl(x->vpi_vci_pt_clp) & 0xfff00000) >> 20)
+    #define ATM_NNI_VCI(x) ((ntohl(x->vpi_vci_pt_clp) & 0x0ffff0) >> 4)
+    #define ATM_NNI_PT(x) ((ntohl(x->vpi_vci_pt_clp) & 0x0e) >> 1)
+    #define ATM_NNI_CLP(x) (ntohl(x->vpi_vci_pt_clp) & 0x01)
 } PACKED libtrace_atm_nni_cell_t;
 ct_assert(sizeof(libtrace_atm_nni_cell_t) == 5);
 
@@ -980,11 +1009,20 @@ ct_assert(sizeof(libtrace_atm_nni_cell_t) == 5);
  */
 typedef struct libtrace_atm_capture_cell
 {
-  LT_BITFIELD32 gfc:4;		/**< Generic Flow Control */
-  LT_BITFIELD32 vpi:8;		/**< Virtual Path Identifier */
-  LT_BITFIELD32 vci:16;		/**< Virtual Channel Identifier */
-  LT_BITFIELD32 pt:3;		/**< Payload Type */
-  LT_BITFIELD32 clp:1;		/**< Cell Loss Priority */
+    /* This field contains
+     * generic flow control (gfc) - 4 bits
+     * virtual path identifier (vpi) - 8 bits
+     * virtual channel identifier (vci) - 16 bits
+     * payload type (pt) - 3 bits
+     * cell loss priority (clp) - 1 bit
+     * These fields are merged and can be extracted using the macro functions.
+     * This is to deal with values crossing byte boundaries.
+     */
+    uint32_t gfc_vpi_vci_pt_clp;    /**< gfc, vpi, vci, pt, clp */
+
+    /* use macro functions in libtrace_atm_cell_t to extract
+     * gfc, vpi, vci, pt and clp.
+     */
 } PACKED libtrace_atm_capture_cell_t;
 ct_assert(sizeof(libtrace_atm_capture_cell_t) == 4);
 
@@ -997,11 +1035,20 @@ ct_assert(sizeof(libtrace_atm_capture_cell_t) == 4);
  */
 typedef struct libtrace_atm_nni_capture_cell
 {
-  LT_BITFIELD32 vpi:12;		/**< Virtual Path Identifier */
-  LT_BITFIELD32 vci:16;		/**< Virtual Channel Identifier */
-  LT_BITFIELD32 pt:3;		/**< Payload Type */
-  LT_BITFIELD32 clp:1;		/**< Cell Loss Priority */
-  LT_BITFIELD32 hec:8;		/**< Header Error Control */
+    /* This field contains
+     * virtual path identifier (vpi) - 12 bits
+     * virtual channel identifier (vci) - 16 bits
+     * payload type (pt) - 3 bits
+     * cell loss priority (clp) - 1 bit
+     * These fields are merged and can be extracted using the macro functions.
+     * This is to deal with values crossing byte boundaries.
+     */
+    uint32_t vpi_vci_pt_clp;    /**< vpi, vci, pt, clp */
+    uint8_t hec;                /**< Header Error Control */
+
+    /* use macro functions in libtrace_atm_nni_cell_t to extract
+     * vpi, vci, pt and clp
+     */
 } PACKED libtrace_atm_nni_capture_cell_t;
 ct_assert(sizeof(libtrace_atm_nni_capture_cell_t) == 5);
 
