Various fixes for BSD and endianess fixes
 * Guard the Linux-only --file-prefix option in DPDK
 * Make the basic test scripts use /bin/sh were possible
   - FreeBSD doesn't install bash to /bin/bash
 * Remove check on size of XXX structure

 * Make ./test-structure return and error code on failure
 * Correct field ordering in the libtrace_pppoe structure
   - This was incorrect for little-endian systems
 * Add le_to_host conversions when checking the radiotap struct
 * Correct the llcsnap->oui check for big-endian systems
 * Remove size check from libtrace_pflog_header_t as this varies between Linux
   and BSD

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -1083,8 +1083,13 @@ ct_assert(sizeof(libtrace_ppp_t) == 2);
 /** PPPoE header */
 typedef struct libtrace_pppoe
 {
+#if __BYTE_ORDER == __LITTLE_ENDIAN
+ LT_BITFIELD8 type:4;		/**< PPPoE Type */
+ LT_BITFIELD8 version:4;	/**< Protocol version number */
+#else
  LT_BITFIELD8 version:4;	/**< Protocol version number */
  LT_BITFIELD8 type:4;		/**< PPPoE Type */
+#endif
  uint8_t code;			/**< PPPoE Code */
  uint16_t session_id;		/**< Session Identifier */
  uint16_t length;		/**< Total Length of the PPP packet */
