--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -251,6 +251,8 @@ typedef int32_t lt_unaligned_int32_t ALIGNED(1);
 typedef int16_t lt_unaligned_int16_t ALIGNED(1);
 typedef int8_t lt_unaligned_int8_t ALIGNED(1);
 
+#define LIBTRACE_MIN(a,b) ((a)<(b) ? (a) : (b))
+
 /** Opaque structure holding information about an output trace */
 typedef struct libtrace_out_t libtrace_out_t;
 
