--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -58,8 +58,8 @@ jobs:
       run: cd test; ./do-tests-parallel.sh
     - name: Run do-tests-datastruct.sh
       run: cd test; ./do-tests-datastruct.sh
-#    - name: Run do-live-tests.sh
-#      run: cd test; sudo ./do-live-tests.sh
+    - name: Run do-live-tests.sh
+      run: cd test; sudo ./do-live-tests.sh
   run-tests-macos:
     name: Run Tests - MacOS
     runs-on: macos-latest
