--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -27,7 +27,14 @@ jobs:
       with:
         submodules: recursive
     - name: Install Dependencies
-      run: sudo apt-get install flex bison libpcap0.8-dev libtool autoconf automake m4 gcc clang llvm gcc-multilib libelf-dev git
+      run: |
+        sudo apt-get install flex bison libpcap0.8-dev libtool autoconf automake m4 gcc clang llvm gcc-multilib libelf-dev git dpdk-dev 
+    - name: Install PF_RING
+      run: |
+        sudo apt-get install software-properties-common wget
+        sudo add-apt-repository -y universe
+        wget https://packages.ntop.org/apt-stable/20.04/all/apt-ntop-stable.deb
+        sudo apt-get install ./apt-ntop-stable.deb
     - name: Build/Install Wandio
       run: |
         cd wandio
@@ -47,7 +54,7 @@ jobs:
     - name: Build/Install Libtrace
       run: |
         ./bootstrap.sh
-        ./configure
+        ./configure --with-dpdk --with-pfring --with-xdp
         make
         sudo make install
     - name: Build Tests
@@ -59,7 +66,7 @@ jobs:
     - name: Run do-tests-datastruct.sh
       run: cd test; ./do-tests-datastruct.sh
     - name: Run do-live-tests.sh
-      run: cd test; sudo ./do-live-tests.sh
+      run: cd test; sudo ./do-live-tests.sh pcap int ring pfring
   run-tests-macos:
     name: Run Tests - MacOS Catalina 10.15
     runs-on: macos-10.15
