--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -51,7 +51,7 @@ jobs:
         sudo insmod dag.ko
         sudo lsmod
     - name: Checkout Libtrace
-    - uses: actions/checkout@v2
+      uses: actions/checkout@v2
       with:
         path: libtrace
         submodules: recursive
