--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,6 +47,7 @@ jobs:
         token: ${{ secrets.DAG_WANDUOW }}
     - name: Build DAG
       run: |
+        cd dag
         sudo make KSRC=/lib/modules/$(uname -r)/build
         sudo insmod dag.ko
         sudo lsmod
@@ -57,36 +58,41 @@ jobs:
         submodules: recursive
     - name: Build/Install Wandio
       run: |
-        cd wandio
+        cd libtrace/wandio
         ./bootstrap.sh
         ./configure
         make
         sudo make install
         sudo ldconfig
+    - name: Checkout Libbpf
+      uses: actions/checkout@v2
+      with:
+        path: libbpf
+        repository: libbpf/libbpf
     - name: Build/Install Libbpf
       run: |
-        git clone https://github.com/libbpf/libbpf
-        cd libbpf/src
+        cd libbpf/libbpf/src
         make
         sudo make install
         echo "/usr/lib64" | sudo tee -a /etc/ld.so.conf.d/lib64.conf
         sudo ldconfig
     - name: Build/Install Libtrace
       run: |
+        cd libtrace
         ./bootstrap.sh
         ./configure --with-dpdk --with-pfring --with-xdp --with-dag
         make
         sudo make install
     - name: Build Tests
-      run: cd test; make address-san
+      run: cd libtrace/test; make address-san
     - name: Run do-tests.sh
-      run: cd test; ./do-tests.sh
+      run: cd libtrace/test; ./do-tests.sh
     - name: Run do-tests-parallel.sh
-      run: cd test; ./do-tests-parallel.sh
+      run: cd libtrace/test; ./do-tests-parallel.sh
     - name: Run do-tests-datastruct.sh
-      run: cd test; ./do-tests-datastruct.sh
+      run: cd libtrace/test; ./do-tests-datastruct.sh
     - name: Run do-live-tests.sh
-      run: cd test; sudo ./do-live-tests.sh pcap int ring pfring dpdk
+      run: cd libtrace/test; sudo ./do-live-tests.sh pcap int ring pfring dpdk
   run-tests-macos:
     name: Run Tests - MacOS Catalina 10.15
     runs-on: macos-10.15
