--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,14 +43,20 @@ jobs:
       uses: actions/checkout@v2
       with:
         path: dag
-        repository: wanduow/dag
-        token: ${{ secrets.DAG_WANDUOW }}
-    - name: Build DAG
+        repository: jacobvw/dag
+        token: ${{ secrets.DAG_JACOBVW }}
+    - name: Build DAG Kernel Module
       run: |
-        cd dag
+        cd dag/kernel-module
         sudo make KSRC=/lib/modules/$(uname -r)/build
         sudo insmod dag.ko
         sudo lsmod
+    - name: Install DAG Packages
+      run: |
+        cd dag/DAG5.8.3-BIN-Ubuntu18.04
+        sudo apt-key add ENDACE_GPG_KEY
+        cd ubuntu18.04
+        sudo apt-get -y install ./dag-dev_5.8.3_amd64.deb
     - name: Checkout Libbpf
       uses: actions/checkout@v2
       with:
