--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,7 +54,7 @@ jobs:
       run: |
         sudo apt-get -y install libhwloc-dev
         cd dag
-        sudo apt-key add ENDACE_GPG_KEY
+        sudo apt-key add DAG5.8.3-BIN-Ubuntu18.04/ENDACE_GPG_KEY
         sudo apt-get install ./dag-extras/libhwloc5_1.11.9-1_amd64.deb
         cd DAG5.8.3-BIN-Ubuntu18.04/ubuntu18.04
         sudo apt-get -y install ./dag-dev_5.8.3_amd64.deb ./dag-base_5.8.3_amd64.deb ./libntar_1.1.0_amd64.deb
