--- a/.github/workflows/dpdk.yaml
+++ b/.github/workflows/dpdk.yaml
@@ -24,6 +24,6 @@ jobs:
         path: libtrace
         submodules: recursive
     - name: Install Dependencies
-      run: sudo apt-get -y install meson
+      run: sudo apt-get -y install meson flex bison libpcap0.8-dev libtool pkgconf wget m4 autoconf automake gcc
     - name: Build DPDK
       run: cd libtrace/test; sudo ./do-test-build-dpdk.sh
