--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,7 +22,18 @@ jobs:
   run-tests-ubuntu:
     name: Run Tests - Ubuntu 20.04
     runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        include:
+          - c_compiler: gcc
+            cxx_compiler: g++
+          - c_compiler: clang
+            cxx_compiler: clang++
     steps:
+    - name: Setup Enviroment Variables
+      env:
+        CC: ${{ matrix.c_compiler }}
+        CXX: ${{ matrix.cxx_compiler }}
     - uses: actions/checkout@v2
       with:
         path: libtrace
@@ -30,7 +41,7 @@ jobs:
     - name: Install Dependencies
       run: |
         sudo apt update
-        sudo apt-get -y install flex bison libpcap0.8-dev libtool pkgconf autoconf automake m4 gcc clang llvm gcc-multilib libelf-dev git dpdk-dev 
+        sudo apt-get -y install flex bison libpcap0.8-dev libtool pkgconf autoconf automake m4 gcc clang llvm gcc-multilib libelf-dev git dpdk-dev
     - name: Install PF_RING
       run: |
         sudo apt-get -y install software-properties-common wget
